# HaskellToyProject

./: .gitignore  HaskellToyProject.cabal  README.md
app/: Main.hs
src/: Barcode.hs  BetterPredicate.hs  ContravariantFunctor.hs  ControlledVisit.hs  ElfMagic.hs  FoldDir.hs  Glob.hs  GlobRegex.hs  HighestClose.hs  JSONClass.hs  Lib.hs  PNM.hs  Parse.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  QC.hs  QC_basics.hs  RecursiveContents.hs  Run.hs  SimpleFinder.hs  SimpleJSON.hs  SplitLines.hs  TempFile.hs  ToUpperLazy.hs  ToUpperLazy2.hs  TreeMap.hs  Useful.hs
test/: Spec.hs
