name:                HaskellToyProject
version:             1
homepage:            https://github.com/wheniturnintoamartian/HaskellToyProject#readme
author:              Stefanos Papadogiannis
copyright:           2017 Stefanos Papadogiannis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleJSON
                     , SplitLines
                     , PutJSON
                     , PrettyJSON
                     , Prettify
                     , JSONClass
                     , TempFile
                     , ContravariantFunctor
                     , ToUpperLazy
                     , ToUpperLazy2      
                     , ElfMagic         
                     , HighestClose 
                     , GlobRegex   
                     , Glob  
                     , Useful
                     , RecursiveContents
                     , SimpleFinder
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.0.0
                     , contravariant >= 1.4
                     , bytestring >= 0.10.8.1
                     , regex-posix >= 0.95.2
                     , filepath >= 1.4.1.1
  default-language:    Haskell2010

executable HaskellToyProject-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fwarn-incomplete-patterns
  build-depends:       base
                     , HaskellToyProject
                     , regex-posix
                     , filepath
  default-language:    Haskell2010

test-suite HaskellToyProject-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellToyProject
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wheniturnintoamartian/HaskellToyProject
